exports[`Talk - Preview renders correctly in bottom position 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "height": 70,
        "justifyContent": "center",
        "left": 0,
        "paddingHorizontal": 60,
        "position": "absolute",
        "width": 750,
      },
      Object {
        "bottom": -70,
      },
    ]
  }>
  <View
    style={
      Object {
        "backgroundColor": "transparent",
        "transform": Array [
          Object {
            "scale": 1,
          },
        ],
      }
    }>
    <Text
      accessible={true}
      allowFontScaling={false}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#383838",
            "fontSize": 20,
          },
          undefined,
          Object {
            "fontFamily": "Ionicons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
        ]
      }>
      
    </Text>
  </View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      Object {
        "textAlign": "center",
      }
    }>
    React Boilerplate
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#666",
        "textAlign": "center",
      }
    }>
    React Boilerplate
  </Text>
</View>
`;

exports[`Talk - Preview renders correctly in top position 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "height": 70,
        "justifyContent": "center",
        "left": 0,
        "paddingHorizontal": 60,
        "position": "absolute",
        "width": 750,
      },
      Object {
        "top": -70,
      },
    ]
  }>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      Object {
        "textAlign": "center",
      }
    }>
    React Boilerplate
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#666",
        "textAlign": "center",
      }
    }>
    React Boilerplate
  </Text>
  <View
    style={
      Object {
        "backgroundColor": "transparent",
        "transform": Array [
          Object {
            "scale": 1,
          },
        ],
      }
    }>
    <Text
      accessible={true}
      allowFontScaling={false}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#383838",
            "fontSize": 20,
          },
          undefined,
          Object {
            "fontFamily": "Ionicons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
        ]
      }>
      
    </Text>
  </View>
</View>
`;
